<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@android:color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<ScrollView
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		<LinearLayout 
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
			android:background="@android:color/white" 
		    android:layout_gravity="left" >
			<TextView  
				android:id="@+id/header" 
			    android:layout_width="fill_parent" 
				android:textColor="@color/background"
				android:background="@android:color/white" 
				android:gravity="center"
				android:textSize="18sp"
				android:textStyle="bold"
				android:layout_height="50dip"
				android:padding="10dp"/>
		    <View android:layout_height="2dip" android:layout_width="fill_parent" android:background="#FF909090" />	
			<TextView  
				android:id="@+id/whats_new" 
				android:text="@string/whats_new" 
				android:layout_width="fill_parent" 
				android:layout_height="40dip"
				android:padding="10dp" 
				android:textSize="16sp"
				android:drawSelectorOnTop="true"
				android:textColor="@android:color/black" 
				android:gravity="center_vertical"
				android:background="@drawable/list_selector" 
				android:layout_alignParentRight="true"
				android:drawablePadding="10dip"
				android:drawableLeft="@drawable/whatsnew"/>
		    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#FF909090" />	
			<TextView  
				android:id="@+id/whiteboards" 
				android:text="@string/whiteboards" 
				android:layout_width="fill_parent" 
				android:layout_height="40dip"
				android:padding="10dp" 
				android:textSize="16sp"
				android:drawSelectorOnTop="true"
				android:textColor="@android:color/black" 
				android:gravity="center_vertical"
				android:background="@drawable/list_selector" 
				android:layout_alignParentRight="true"
				android:drawablePadding="10dip"
				android:drawableLeft="@drawable/whiteboard"/>
		    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#FF909090" />	
			<TextView  
				android:id="@+id/tasks" 
				android:text="@string/tasks" 
				android:layout_width="fill_parent" 
				android:layout_height="40dip"
				android:padding="10dp" 
				android:textSize="16sp"
				android:drawSelectorOnTop="true"
				android:textColor="@android:color/black" 
				android:gravity="center_vertical"
				android:background="@drawable/list_selector" 
				android:layout_alignParentRight="true"
				android:drawablePadding="10dip"
				android:drawableLeft="@drawable/task"/>
		    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#FF909090" />	
			<TextView  
				android:id="@+id/discussions" 
				android:text="@string/discussions" 
				android:layout_width="fill_parent" 
				android:layout_height="40dip"
				android:padding="10dp" 
				android:textSize="16sp"
				android:drawSelectorOnTop="true"
				android:textColor="@android:color/black" 
				android:gravity="center_vertical"
				android:background="@drawable/list_selector" 
				android:layout_alignParentRight="true"
				android:drawablePadding="10dip"
				android:drawableLeft="@drawable/discussion"/>
		    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#FF909090" />	
			<TextView  
				android:id="@+id/files" 
				android:text="@string/files" 
				android:layout_width="fill_parent" 
				android:layout_height="40dip"
				android:padding="10dp" 
				android:textSize="16sp"
				android:drawSelectorOnTop="true"
				android:textColor="@android:color/black" 
				android:gravity="center_vertical"
				android:background="@drawable/list_selector" 
				android:layout_alignParentRight="true"
				android:drawablePadding="10dip"
				android:drawableLeft="@drawable/files"/>
		    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#FF909090" />	
			<TextView  
				android:id="@+id/people" 
				android:text="@string/people" 
				android:layout_width="fill_parent" 
				android:layout_height="40dip"
				android:padding="10dp" 
				android:textSize="16sp"
				android:drawSelectorOnTop="true"
				android:textColor="@android:color/black" 
				android:gravity="center_vertical"
				android:background="@drawable/list_selector" 
				android:layout_alignParentRight="true"
				android:drawablePadding="10dip"
				android:drawableLeft="@drawable/people"/>
		    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#FF909090" />	
		</LinearLayout>
	</ScrollView>
</LinearLayout>
